    YYFREE.
    Type: feature
    Changed: wc/HtmlParser/htmlparse.y

  * Do not try to detect CSS Mime type with the magic(5) database, since
    it is not supported there.
    Introduced an wc.magic.unsupported_types list for that.
    Type: bugfix
    Changed: wc/magic/__init__.py, wc/proxy/HttpServer.py

  * Added german man pages.
    Type: documentation
    Added: docs/de/*.[15]

2.23 "The fog of war" (released 27.10.2004)

  * Fixed MIME type changing.
    Type: bugfix
    Changed: wc/proxy/Headers.py

  * Handle case in MIME recognizing where Content-type header was
    missing.
    Type: bugfix
    Changed: wc/filter/MimeRecognizer.py
    
  * Only enable support for network interface configuration on
    Linux and Windows platforms. All other are currently not supported.
    Type: bugfix
    Closes: SF bug #1053838
    Changed: wc/dns/ifconfig.py

  * The windows installation has been fixed.
    Type: bugfix
    Closes: SF bug #1053899
    Changed: setup.py, wc/proxy/Dispatcher.py

  * Ignore encoding errors of HTML content.
    Type: bugfix
    Changed: wc/filter/HtmlParser.py

  * Proper reset of Connection objects, including emptying of all send
    and receive buffers.
    Type: bugfix
    Changed: wc/proxy/*Connection.py

  * Updated spidermonkey JavaScript library from upstream CVS as of
    20041026
    Type: feature
    Changed: libjs/*

2.22 "Monster" (released 20.10.2004)

  * added favicon.ico to distributed files
    Type: bugfix
    Changed: setup.py

  * fix filter update imports
    Type: bugfix
    Changed: wc/update.py

  * fix folder config charset import
    Type: bugfix
    Changed: wc/filter/rules/FolderRule.py

  * initialize indexstr attr after generating new folders
    Type: bugfix
    Changed: wc/webgui/context/filterconfig_html.py

  * use correct configdir in all classes
    Type: bugfix
    Changed: wc/update.py, wc/magic/__init__.py, wc/webgui/context/*.py
      wc/filter/Blocker.py
