@@ -36,6 +36,11 @@
     Type: documentation
     Added: docs/de/*.[15]
 
+  * Disable the BinaryCharFilter for Unicode data since the HTML
+    parser does not yet support Unicode.
+    Type: bugfix
+    Changed: wc/filter/BinaryCharFilter.py
+
 2.23 "The fog of war" (released 27.10.2004)
 
   * Fixed MIME type changing.
